# RootPlotter

./: .clang-format  CMakeLists.txt  a.out  base.lua  data.h  example.lua  glob.hpp  hist_def.cpp  hist_def.h  plotter.cpp  readme.md  test.lua
configure/: install_info.h.in
scripts/: base.lua  cutflow.lua  extract_keys.lua  get_totals.lua  list_pals.lua  text.lua  util.lua
src/: annotations.cpp  annotations.h  bindings.cpp  bindings.h  data.cpp  data.h  glob.hpp  main.cpp  operators.cpp  operators.h  plot_element.cpp  plot_element.h  plotters.cpp  plotters.h  plotting.cpp  plotting.h  style.cpp  style.h  util.h  verbosity.cpp  verbosity.h
